--- a/.github/workflows/terraform_pr.yml
+++ b/.github/workflows/terraform_pr.yml
@@ -6,8 +6,13 @@ jobs:
     name: 'Terraform'
     runs-on: ubuntu-latest
     steps:
+      - name: 'Setting up job'
+        run: |
+          echo ${{ secrets.GCP_CREDENTIALS }} > /tmp/gcp_credentials.json
+          
       - name: 'Checkout'
-        uses: actions/checkout@master
+        uses: actions/checkout@master 
+
       - name: 'Terraform Format'
         uses: hashicorp/terraform-github-actions@master
         with:
