--- a/.github/workflows/terraform_pr.yml
+++ b/.github/workflows/terraform_pr.yml
@@ -7,11 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GCP_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
-      GCP_CREDENTIALS_PATH: "./gcp_credentials.json"
+      GOOGLE_APPLICATION_CREDENTIALS: "./gcp_credentials.json"
     steps:
       - name: 'Setting up job'
         run: |
-          echo $GCP_CREDENTIALS > $GCP_CREDENTIALS_PATH
+          echo $GCP_CREDENTIALS > $GOOGLE_APPLICATION_CREDENTIALS
       - name: 'Checkout'
         uses: actions/checkout@master 
 
@@ -25,7 +25,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_VAR_gcp_credentials: ${{ secrets.GCP_CREDENTIALS }}
-          GOOGLE_APPLICATION_CREDENTIALS: $GCP_CREDENTIALS_PATH
 
       - name: 'Terraform Init'
         uses: hashicorp/terraform-github-actions@master
@@ -37,7 +36,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_VAR_gcp_credentials: ${{ secrets.GCP_CREDENTIALS }}
-          GOOGLE_APPLICATION_CREDENTIALS: $GCP_CREDENTIALS_PATH
 
       - name: 'Terraform Validate'
         uses: hashicorp/terraform-github-actions@master
@@ -49,7 +47,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_VAR_gcp_credentials: ${{ secrets.GCP_CREDENTIALS }}
-          GOOGLE_APPLICATION_CREDENTIALS: $GCP_CREDENTIALS_PATH
 
       - name: 'Terraform Plan'
         id: 'terraform_plan'
@@ -62,4 +59,3 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_VAR_gcp_credentials: ${{ secrets.GCP_CREDENTIALS }}
-          GOOGLE_APPLICATION_CREDENTIALS: $GCP_CREDENTIALS_PATH
