[-](actions): Fixed action to work with gitflow

--- a/.github/workflows/terraform_pr.yml
+++ b/.github/workflows/terraform_pr.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GCP_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
-      GOOGLE_APPLICATION_CREDENTIALS: "/github/workspace/gcp_credentials.json"
+      GOOGLE_APPLICATION_CREDENTIALS: $HOME/gcp_credentials.json
     steps:
       - name: 'Setting up job'
         run: |
