--- a/.github/workflows/terraform_master.yml
+++ b/.github/workflows/terraform_master.yml
@@ -71,7 +71,7 @@ jobs:
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 0.12.16
-          tf_actions_subcommand: 'apply'
+          tf_actions_subcommand: 'plan'
           tf_actions_working_dir: './provisioning'
           tf_actions_comment: false
         env:
